# SolGuard

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-THIRD-PARTY.md  NOTICE  README.md  README.zh-CN.md
docs/: ARCHITECTURE.md  README.md  USAGE.md  USAGE.zh-CN.md
docs/case-studies/: README.md
docs/case-studies/01-multi-vuln-cpi/: HIGHLIGHTS.md  assessment.md
docs/demo/: deck-notes.md  deck-source.md  script.md
docs/knowledge/: solana-vulnerabilities.md
scripts/: README.md  assert_quality.py  export-keypair-to-clipboard.py  oh-use.sh  setup.sh  soak_test.py  verify-phase1.sh  verify-phase3.sh
skill/solana-security-audit-skill/: README.md  SKILL.md  __init__.py  pyproject.toml  requirements.txt  skill.yaml
skill/solana-security-audit-skill/ai/: __init__.py  analyzer.py  analyzer_tool.py  planner.py  prompts.py  prompts_v2.py
skill/solana-security-audit-skill/ai/agents/: __init__.py  types.py
skill/solana-security-audit-skill/ai/judge/: __init__.py  attack_scenario.py  counter_question.py  kill_signal.py  llm_shim.py  seven_q_gate.py
skill/solana-security-audit-skill/assets/semgrep-rules/: solana-invoke-without-pda-check.yaml  solana-manual-deserialize.yaml  solana-raw-arithmetic.yaml  solana-unchecked-account.yaml
skill/solana-security-audit-skill/core/: __init__.py  types.py
skill/solana-security-audit-skill/knowledge/: solana_bug_patterns.json
skill/solana-security-audit-skill/reporters/: __init__.py  markdown.py
skill/solana-security-audit-skill/scripts/: assert_smoke.py  build_audit_bundle.py  compare_benchmarks.py  e2e_smoke.sh  e2e_smoke_degraded.sh  oh_skill_smoke.sh  profile_audit.py  run_audit.py  run_benchmark.py  skill_tool.py  validate_benchmarks.py
skill/solana-security-audit-skill/tests/: conftest.py  test_ai_judge.py  test_ai_kill_signal.py  test_attack_classify.py  test_cq_verdict.py  test_parse.py  test_planner.py  test_report.py  test_run_audit_multi.py  test_scan.py  test_semgrep.py  test_skill_playbook_smoke.py  test_skill_tool.py  test_types.py
skill/solana-security-audit-skill/tests/fixtures/adversarial/: fake_missing_signer.rs  real_arbitrary_cpi.rs
skill/solana-security-audit-skill/tools/: __init__.py  semgrep_runner.py  solana_attack_classify.py  solana_cq_verdict.py  solana_judge_lite.py  solana_kill_signal.py  solana_parse.py  solana_report.py  solana_scan.py  solana_seven_q.py
skill/solana-security-audit-skill/tools/rules/: __init__.py
solguard-server/: .env.example  .env.test  .eslintrc.json  .prettierignore  .vercelignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
solguard-server/public/: api.js  app.js  demo-shim.js  docs.html  errors.js  index.html  openapi.yaml  payment-qr.js  payment.js  report.js  styles.css  wallet.js
solguard-server/scripts/: _lark-sink.mjs  send-test-email.ts
solguard-server/src/: audit-engine.ts  config.ts  email.test.ts  email.ts  logger.ts  openharness-client.test.ts  openharness-client.ts  payment-poller.ts  payment.ts  server.ts  task-logger.test.ts  task-logger.ts  types.ts
test-fixtures/: README.md  benchmark.yaml
test-fixtures/contracts/: 01_missing_signer.rs  02_missing_owner.rs  03_integer_overflow.rs  04_arbitrary_cpi.rs  05_clean_contract.rs  ground_truth.yaml
test-fixtures/known-incidents/: cashio_poc.rs
(+58 files in other folders)
